--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -1,36 +1,26 @@
 {
-  "info": {
-
-  },
-  "label": {
-    "Academus": "Academus",
-    "close": "Close"
-  },
-  "errors": {
-    "RequestInvalid": "",
-    "Unauthorized": "",
-    "RequirementsNotMet": "",
-    "IdentityError": "{{details}}",
-    "EntityDoesNotExist": "{{entityName}} ne postoji.",
-    "EntityAlreadyExists": "{{entityName}} već postoji.",
-    "InternalServerError": "{{details}}",
-    "InvalidCredentials": "Neispravni podaci.",
-    "EmptyFile": "",
-    "MaxFileSizeReached": "Neuspešno. Slika ne može biti veća od {{maxSizeInMb}} MB.",
-    "CanOnlyUploadPhotos": "",
-    "WrongAspectRatio": "",
-    "MissingAspectRatio": "",
-    "EmailNotSent": "Dogodila se greška, email nije poslat, pokusajte kasnije.",
-    "AlreadyConfirmedEmail": "Mail adresa je već potvrđena.",
-    "InvalidConfirmationCode": "Pogrešan kod za potvrdu.",
-    "InvalidGoogleAccount": "Ovaj Google nalog nije validan, prvo se registrujte.",
-    "ConfirmationCodeExpired": "Ovaj kod za potvrdu je istekao.",
-    "Name is required." : "Ime je obavezno."
-  },
-  "confirmMessages": {
-
-  },
-  "placeholders": {
-
+  "admin": {
+    "logoTitle": "Academus",
+    "menu": {
+      "addMaterials": "Dodaj materijale",
+      "registeredUsers": "Prijavljeni korisnici",
+      "logout": "Odjavi se"
+    },
+    "materials": {
+      "title": "Naziv materijala",
+      "subject": "Predmet",
+      "chooseSubject": "Izaberi predmet",
+      "type": "Tip",
+      "collection": "Zbirka",
+      "oldExams": "Stari rokovi",
+      "chooseFile": "Izaberi fajl",
+      "add": "Dodaj",
+      "view": "Pogledaj",
+      "delete": "Obriši",
+      "fillAllFields": "Popuni sva polja"
+    },
+    "users": {
+      "registered": "Prijavljeni korisnici"
+    }
   }
 }
